--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "expo": "^34.0.1",
+    "expo-permissions": "^7.0.0",
+    "expo-secure-store": "^7.0.0",
+    "install": "^0.13.0",
     "react": "16.8.3",
     "react-devtools": "^3.2.3",
     "react-dom": "^16.8.6",
