--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "expo": "^34.0.1",
+    "expo-image-picker": "^7.0.0",
+    "expo-mail-composer": "^7.0.0",
     "expo-permissions": "^7.0.0",
     "expo-secure-store": "^7.0.0",
     "install": "^0.13.0",
