--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-image-picker": "^7.0.0",
     "expo-mail-composer": "^7.0.0",
     "expo-permissions": "^7.0.0",
+    "expo-print": "^7.0.0",
     "expo-secure-store": "^7.0.0",
     "install": "^0.13.0",
     "react": "16.8.3",
